@@ -1,5 +1,6 @@
-AUX postinstall-en-0.9.5.txt 1014 RMD160 8d20edeefbc627bae1d025be057d629530821036 SHA1 7e6c71d17334834924cde3fd234f3bca61073469 SHA256 01c922524a1bd81b7f060fa58d4a0b8766587e1d93c6a6d6452306daaf5abce5
+AUX postinstall-en-0.9.6.1.txt 454 RMD160 70049c183595d07d5c593559ab12deefd6f527af SHA1 2e0a4b910cd1c4d70b3e2e833a4c6e0936e51578 SHA256 f48369f39f64da2ca21167e68d7787c963d118777809c8e5b73862adab0e3794
 AUX rscds.conf 11907 RMD160 bdd38b174cf76e2a2ea76da5ed09706d000ccd20 SHA1 12da666505dd8fb814e775f21f9bc7e623dc7597 SHA256 25d27389f72caf07e9c008bd1cfe791eac69a85309ab226946d9d7e4304ec9b7
-EBUILD davical-0.9.5.2.ebuild 1613 RMD160 3085513863eaa061dc1be35f9d8b0dc30bd3eafa SHA1 d9ffbb8ac028b312ea60c1a81e79b2fe91c99b08 SHA256 e8ba5f7cdfd193987e7858448e63b66ef90b21ab7b4fcd66b9c38029b10712ce
-MISC ChangeLog 552 RMD160 fa187220d7d566161981d57b53cd3f5f530e6417 SHA1 4310f8b8a84550420841dc3608d6aeb63822369d SHA256 3c0bb86e5948c7a06ff299bd576345ef3348d6e2f8212c0c9139ad89e98a4f77
+DIST davical_0.9.6.1.tar.gz 802115 RMD160 e2becba5493b1855b8a0f379d3392872cf35cb60 SHA1 d84e878e2b0984147d830937c5d1ee8ea8a051a5 SHA256 ffae4e384a011e2a202b00eecb23475cf4eeacd7abc529543220c441babdb2d4
+EBUILD davical-0.9.6.1.ebuild 1610 RMD160 b9cf93d54c1de0c71ea0d61cc93a5545f9d463aa SHA1 a5faeb8f616af3cad393da01fcc1b82c96d743fc SHA256 e0ad5bc0a22949ea6136c2f7b8bd0cfecfa39c717dfdffc92e61bf4748a01379
+MISC ChangeLog 749 RMD160 634167ec5df3b4c09d54af4acca8b6c16cae4d99 SHA1 69f831fa5f88a77b39a6517069320463527885e2 SHA256 a4dc44b8f0be612290a36816f9fd93e2237f95adcae704f1a6950c051ed9d1fb
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
