@@ -1,27 +1,0 @@
-1. You must setup a configuration file in the follow location:
-   /etc/davical/<servername>-conf.php
-
-2. Apache must be configured, here is a template:
-   <VirtualHost *:80>
-        DocumentRoot /var/www/<vhost>/htdocs/rscds/htdocs
-        DirectoryIndex index.php index.html
-        ServerName calendar.example.com
-        ServerAlias calendar.example.com
-        Alias /images/ /var/www/<vhost>/htdocs/images/
-        php_value include_path /usr/share/awl/inc
-        php_value magic_quotes_gpc 0
-        php_value register_globals 0
-        <Directory "/var/www/<vhost>/htdocs/rscds/htdocs">
-             Order deny,allow
-             Allow from all
-        </Directory>
-    </VirtualHost>
-
-3. You must setup a database in PostGreSQL.  Follow these instructions:
-   su postgres -c createuser --no-createdb general
-   su postgres -c \
-      /usr/share/webapps/rscds/<version>/sqlscripts/create-database.sh
-
-
-The full installation documentation can be found here:
-   http://rscds.sourceforge.net/installation.php
