@@ -1,0 +1,10 @@
+You will need access to postgresql database to use davical.
+
+Read /usr/share/doc/www-apps/davical-0.9.6.1/INSTALL.gz for installation
+instructions. Full documentation and wiki on http://davical.org
+
+If you are upgrading from a previous version of davical, don't forget to
+upgrade the database structure with
+	cd /usr/share/webapps/davical/0.9.6.1/sqlscripts/
+	chmod u+x update-davical-database
+	./update-davical-database -dbuser xxxxxxx -appuser xxxxxxx
